# openarm_impedance_control

./: CMakeLists.txt  openarm_impedance_plugins.xml  package.xml
config/: openarm_cartesian_controllers.yaml  openarm_impedance_controllers.yaml
include/openarm_impedance_control/: cartesian_correction.hpp  controller_params.hpp  goal_limits.hpp  impedance.hpp  impedance_law.hpp  motor_gains.hpp  openarm_impedance_controller.hpp  robot_model.hpp
launch/: openarm_impedance_control.launch.py
src/: cartesian_correction.cpp  controller_params.cpp  goal_limits.cpp  impedance.cpp  impedance_law.cpp  motor_gains.cpp  openarm_impedance_controller.cpp  robot_model.cpp
test/: check_ordering.py  common.sh  fk_pose.py  gravity_test.sh  impedance_test.sh  trajectory_test.sh
